Gave a proper HTML title, logging changes
- Logs are done by date/time now, plus code
- Title of machine connected to is set
- ?points query param that can set graph max points
- Max points on graph defaults to 60sec display

--- a/Tractus.PerfTool/Properties/launchSettings.json
+++ b/Tractus.PerfTool/Properties/launchSettings.json
@@ -6,7 +6,8 @@
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       },
-      "applicationUrl": "https://localhost:23753;http://localhost:23754"
+      "applicationUrl": "https://localhost:23753;http://localhost:23754",
+      "commandLineArgs": "--debugweb --disableconsole"
     }
   }
 }
