--- a/Tractus.PerfTool/Tractus.PerfTool.csproj
+++ b/Tractus.PerfTool/Tractus.PerfTool.csproj
@@ -5,7 +5,7 @@
     <TargetFramework>net8.0-windows</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
-    <Version>2024.11.18.2</Version>
+    <Version>2024.11.20.1</Version>
     <Title>Tractus PerfTool</Title>
     <Company>Tractus Events</Company>
     <PackageIcon>appicon.png</PackageIcon>
@@ -13,7 +13,9 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <Content Include="appicon.ico" />
+    <Content Include="appicon.ico">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
   </ItemGroup>
 
   <ItemGroup>
